--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   quran: ^1.2.3
   flutter_svg: ^2.0.10+1
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +83,7 @@ flutter:
         - asset: assets/fonts/Inter.ttf
     - family: Montserrat
       fonts:
-        - asset: assets/fonts/montserrat.ttf
+        - asset: assets/fonts/Montserrat.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
