--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   quran: ^1.2.3
   flutter_svg: ^2.0.10+1
   flutter_staggered_grid_view: ^0.7.0
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
